# codex-authority-flow

./: .gitignore  LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml
cli/: codex-authority-flow.mjs
python/codex_authority_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: install.ps1  install.sh
skill/references/: decision-matrix.md
templates/: AGENTS.global.md  AGENTS.project.example.md
